<resources>
    <string name="app_name">PADC-3-F-HHA-MM-News</string>
    <string name="action_settings">Settings</string>
    <string name="news">
        နိုင်ငံတော်၏ အတိုင်ပင် ခံပုဂ္ဂိုလ် ဒေါ်အောင်ဆန်းစုကြည် နှင့် တရုတ်သမ္မတစီကျင်းပင်တို့ တွေ့ဆုံ၍ အပြည်ပြည်ဆိုင်ရာ မျက်နှာစာတွင် ဆက်လက်ပူး ပေါင်းဆောင်ရွ...</string>
    <string name="dummy_news">ႏိုင္ငံေတာ္၏ အတုိငၸငၡံပုဂၢိဳလ္ ေဒၚေအာငၧႏ္းစုၾကၫ္ႏြင့္ တ႐ုတ္သမၼတ ရြီက္ငၸင္း ဦးေဆာင္သၫ့္ ကိုယၥားလြယ္အျဖဲ႕ ေၾတ႕ဆုံခဲ့ၿပီး ႏြစ္ႏုိင္ငံအၾကား ထိပ္သီးေၾဆးေႏျးျပဲ က္င္းပခဲ့ေၾကာင္း ႏိုင္ငံေတာ္၏ အတုိငၸငၡံပုဂၢိဳလ္႐ံုးက သတင္းထုတ္်ပႏ္သၫ္။
တ႐ုတ္ႏုိင္ငံသုိ႔ ေရာက္ရြိေေနသာ ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂိၢဳလ္ႏြင့္အျဖဲ႕သၫ္ ဒီဇငၻာ ၁ ရက္ ေဒသစံေတာၡ္ိႏ္ ျမႏ္းၾလဲ ၃ နာရီ ၁၅ မိနျစၲင္ ႏြစ္ႏုိင္ငံ ထိပ္သီးအစၫ္းေအ၀းျပဲသို႔ တက္ေရာက္ရႏ္ ်ပၫ္သဴ႕ခႏ္းေမဆာင္သဳိ႔ ေရာက္ရြိခဲ့ေၾကာင္း၊ ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂိၢဳလ္ႏြင့္ တ႐ုတ္သမၼတ ရြီက္ငၸင္းသၫ္ ေဒသစံေတာၡ္ိႏ္ ျမႏ္းၾလဲ ၃ နာရီျခဲၾတင္ ်ပၫ္သဴ႕ခႏ္းေမဆာင္ ပထမထျပၲင္ေၾတ႕ဆုံခဲ့ေၾကာင္း သိရသၫ္။
ေရြးဦးျစာ တ႐ုတ္်ပၫ္သဴ႕သမၼတႏုိင္ငံသမၼတ ရြီက္ငၸင္းက ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂိၢဳလ္ ေဒၚေအာငၧႏ္းစုၾကၫ္အား ႀကိဳဆုိႏႈတၦက္ၿပီး မြတၱမ္းတငၶာတၸဳံ ႐ုိကၠဴးခဲ့ေၾကာင္း သိရသၫ္။
ေၾတ႕ဆုံစၪ္ ႏြစ္ႏုိင္ငံအၾကား ရြိ်ပီး်ဖစ္သၫ့္ ေၾဆမ္ိဳးေပါက္ေဖာ္ ဆကၦံေရးကုိ ေအ်ခခံၿပီး ဘကၥဳံ မဟာဗ္ဴဟာေ်မာက္ ပူးေပါင္းေဆာျင္ရကၼႈမ္ား အရြိႏ္အဟုႏ္်မႇင့္တင္ေရး၊ အ်ပၫ္်ပၫၦဳိင္ရာ မ္က္ႏြာစာၾတင္ ဆကႅက္ ပူးေပါင္းေဆာျင္ရက္ေရး၊ ႏြစၹက္အဆင့္်မင့္ ေခါင္းေဆာငၼ္ားအၾကား ခ္စ္ၾကၫ္ေရး ခရီးစဥၼ္ား အ်ပႏ္အလြႏ္ ၾသားလာေရး၊ ႏြစ္ႏုိင္ငံ်ပၫ္သဴအခ္င္းခ္င္း ခ္စ္ၾကၫ္ရင္းႏြီးမႈတုိ႔ကုိ ေဖာ္ေဆာင္ေရးႏြင့္ က႑စုံ ပူးေပါင္းေဆာျင္ရက္ေရးတုိ႔ၾတင္ ႏြစ္ႏုိင္ငံအၾကား ေအကာင္အထၫ္ေဖာ္ ေဆာျင္ရကၼၫ့္ စီမံကိႏ္းႀကီးမ္ားႏြင့္ ်မႏၼာႏုိင္ငံ၏ ၿငိမ္းခ္မ္းေရး လုပ္ငႏ္းစၪ္အား တ႐ုတ္ႏုိင္ငံမြ အကူအညီေပးမၫ့္ ကိစၥရပၼ္ားႏြင့္ပတ္သက္၍ ရင္းႏြီးျပင့္လင္းျစာ ေၾဆးေႏျးခဲ့ေၾကာင္းသိရသၫ္။
ေၾတ႕ဆုံျပဲသုိ႔ ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂၢိဳလ္ ေဒၚေအာငၧႏ္းစုၾကၫ္ႏြင့္အတူ ်ပၫ္ေထာငၥဳ၀ႏ္ႀကီး ဦး၀င္းခုိင္၊ မႏၲေလးတုိင္း၀ႏ္ႀကီးခ္ဳပ္ ေဒါကၱာေဇာ္်မင့္ေမာင္၊ ဒု၀ႏ္ႀကီး ဦးမင္းသူႏြင့္ တာ၀ႏ္ရြိသူမ္ား တက္ေရာကၡဲ့ေၾကာင္း သိရသၫ္။
ဆကႅက္ၿပီး ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂိၢဳလ္ ေဒၚေအာငၧႏ္းစုၾကၫ္ႏြင့္အျဖဲ႕သၫ္ ်ပၫ္သဴ႕ခႏ္းေမဆာင္ႀကီးၾတင္ ်ပဳလုပ္သည့္ တ႐ုၾတၠႏ္်မဴနစၸါတီႏြင့္ ်ပၫၸႏိုင္ငံေရးပါတီမ္ား၏ ထိပ္သီးေခါင္းေဆာငၼ္ား ေၾဆးေႏျးျပဲ ျဖင့္ျပဲအခမ္းအနားသုိ႔ တက္ေရာကၡဲ့ေၾကာင္း သိရသၫ္။
အခမ္းအနားသုိ႔ ကမၻာ့ႏုိင္ငံမ္ားမြ ေခါင္းေဆာငၼ္ားႏြင့္ အစုိးရအျဖဲ႕ အႀကီးအကဲမ္ား၊ ကမၻာ့ႏုိင္ငံ အသီးသီးမြ ႏုိင္ငံေရးပါတီမ္ား၏ အႀကီးအကဲမ္ား တက္ေရာကၡဲ့ေၾကာင္း သိရသၫ္။ ထုိ႔်ပင္ ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂိၢဳလ္ႏြင့္ အျဖဲ႕သၫ္ တ႐ုၾတၠႏ္်မဴနစၸါတီႏြင့္ ်ပၫၸႏုိင္ငံေရးပါတီမ္ား၏ ထိပ္သီးေခါင္းေဆာငၼ္ား မ္က္ႏြာစုံညီ အစၫ္းေအ၀း ပထမပုိင္းကုိ တက္ေရာကၡဲ့ေၾကာင္း၊ အစၫ္းေအ၀းၾတင္ ႏုိင္ငံေတာ္၏ အတုိငၸငၡံပုဂၢိဳလ္ ေဒၚေအာငၧႏ္းစုၾကၫ္သၫ္ တ႐ုတ္်ပၫ္သဴ႕သမၼတႏုိင္ငံအစုိးရ၏ အထူးဧၫ့္သၫ္ေတာ္အ်ဖစ္ တက္ေရာက္ မိႏ္႔ျခႏ္းေ်ပာၾကားခဲ့သၫ္။
</string>
    <string name="title_news_by_category">News by Category</string>
    <string name="soccer_news_title">\nRanking the top 10 football\ncommercials of all time</string>
    <string name="news1">Sevilla to report Manchester\nUnited to UEFA over ticket price...</string>
    <string name="news2">Kane reveals sacrifices behind\nbeating Messi,Ronaldo</string>
    <string name="news3">Onefootball Podcast:\nTransfers! Transfers! Transfer...</string>
    <string name="news4">The worst/best miss you\'ll\nsee all day</string>
    <string name="inter_news1_title"><font color="#FFFF5277">California in revolt /</font><font color="#ffffff">How the progressive state plans to foil the Trump agenda</font></string>
    <string name="inter_news1">How the progressive state plans to foil the Trump agenda</string>
    <string name="immigration_news">Dreamers left in \nlimbo after court\nblocks Trump on\nDaca program</string>
    <string name="james_franco_news">Actor accused of \nsexual misconduct \nby five women \nincluding fom...</string>
    <string name="guantanamo_bay">Inmates claim Trump\'s\'anti-Muslim bias' fuels their detention</string>
    <string name="Fisa">Trump suggests surveillance law could have been used to \'abuse' his campaign</string>
    <string name="Iran">UK,Germany and France urge US not to tear up Iran nuclear deal</string>
    <string name="netherlands_title">Netherlands have to answer /</string>
    <string name="Netherlands">Dutch reporters confront new US envoy</string>
</resources>
