<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_head_lines"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="headlines"
                android:textColor="#FF3E87D6"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_posted_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/tv_head_lines"
                android:layout_alignParentRight="true"
                android:layout_marginRight="4dp"
                android:text="11:04 PM" />

            <RelativeLayout
                android:id="@+id/rl_inter_news1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_head_lines"
                android:background="#FFA6153C"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tv_calfornia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inter_news1_title"
                    android:textSize="20sp" />

                <!--<TextView-->
                    <!--android:id="@+id/tv_inter_news1"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_alignBaseline="@id/tv_calfornia"-->
                    <!--android:layout_toRightOf="@id/tv_calfornia"-->
                    <!--android:text="@string/inter_news1"-->
                    <!--android:textColor="#fff"-->
                    <!--android:textSize="20sp" />-->

                <TextView
                    android:id="@+id/tv_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_calfornia"
                    android:drawableLeft="@drawable/ic_access_time_black_24dp"
                    android:drawablePadding="4dp"
                    android:drawableTint="#fff"
                    android:text="6h"
                    android:textColor="#fff"
                    android:textSize="20sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/iv_inter_news1"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/rl_inter_news1"
                android:scaleType="centerCrop"
                android:src="@drawable/img_inter_news1" />

            <LinearLayout
                android:id="@+id/ll_inter_news2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_inter_news1"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_immigration"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="Immigration/"
                            android:textColor="#FF3E87D6"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_immigration_new"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:lineSpacingMultiplier="1.1"
                            android:text="@string/immigration_news"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:drawableLeft="@drawable/ic_access_time_black_24dp"
                            android:drawablePadding="4dp"
                            android:text="49m"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_immigration" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_James_Franco"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:text="James Franco/"
                            android:textColor="#FF3E87D6"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_James_franco_new"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:lineSpacingMultiplier="1.1"
                            android:text="@string/james_franco_news"
                            android:textColor="#000"
                            android:textSize="16sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="4dp"
                            android:layout_marginTop="8dp"
                            android:drawableLeft="@drawable/ic_access_time_black_24dp"
                            android:drawablePadding="4dp"
                            android:text="49m"
                            android:textSize="16sp" />

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:scaleType="centerCrop"
                            android:src="@drawable/img_james_franco" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_inter_news3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_inter_news2"
                android:layout_margin="8dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:id="@+id/ll_inter_news3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Guantanamo Bay /"
                        android:textColor="#FF3E87D6"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/guantanamo_bay"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_inter_news4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_inter_news3"
                android:layout_margin="8dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:id="@+id/ll_inter_news4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/netherlands_title"
                        android:textColor="#FF3E87D6"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Netherlands"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_inter_news5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_inter_news4"
                android:layout_margin="8dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:id="@+id/ll_inter_news5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fisa /"
                        android:textColor="#FF3E87D6"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Fisa"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cv_inter_news6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cv_inter_news5"
                android:layout_margin="8dp"
                app:cardElevation="1dp">

                <LinearLayout
                    android:id="@+id/ll_inter_news6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Iran /"
                        android:textColor="#FF3E87D6"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Iran"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>


        </RelativeLayout>

    </android.support.v7.widget.CardView>
</android.support.design.widget.CoordinatorLayout>